# SummerProject

./: .gitignore  CMakeLists.txt  DrawTriangle.cpp  Painter.cpp  Painter.h  README.md  RandomLines.cpp  RandomPixels.cpp
Demo/: CMakeLists.txt  Cat.cpp  Cube.cpp  Deer.cpp  Dot.cpp  Line.cpp  MultiCubes.cpp  Triangle.cpp  TwoTriangle.cpp
Example/: CMakeLists.txt  ColorTest.cpp  DrawACat.cpp  DrawACube.cpp  DrawADeer.cpp  DrawADog.cpp  DrawALine.cpp  DrawAPoint.cpp  DrawATriangle.cpp  DrawATriangleWithTexture.cpp  DrawCubeWithLight.cpp  TestFunction.cpp  TestZBuffer.cpp
Example2D/: BlackWindow.cpp  CMakeLists.txt  DrawFilledTriangle.cpp  DrawTriangle.cpp  RandomCircle.cpp  RandomEllipse.cpp  RandomLines.cpp  RandomPixels.cpp  RandomShapes.cpp  RandomTriangles.cpp  TestDrawCube.cpp
Example3D/: CMakeLists.txt  DrawCube.cpp
Painter/: CMakeLists.txt  Painter.cpp  Painter.h  PainterException.cpp  PainterException.h  UtilStruct.h
Painter/Shape/: Circle.h  Line.h  Pixel.h  Point.h  Shape.h  Triangle.h
Painter3D/: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Normal.cpp  Normal.h  Painter3D.cpp  Painter3D.h  Painter3DUtil.cpp  Painter3DUtil.h  ProjectionProcessor.cpp  ProjectionProcessor.h  Projector.cpp  Projector.h  RotateProcessor.cpp  RotateProcessor.h  ScaleProcessor.cpp  ScaleProcessor.h
Painter3D/Shape3D/: Cube.h  Mesh.h  Triangle.h  Vec3D.h  Vertex.h
Rasterization/: CMakeLists.txt
Rasterization/Exception/: BaseException.cpp  BaseException.h  GLFWLoginException.cpp  GLFWLoginException.h
Rasterization/Graphics/: Camera.cpp  Camera.h  Color.cpp  Color.h  Drawable.cpp  Drawable.h  IDrawable.cpp  IDrawable.h  ITransformable.cpp  ITransformable.h  Light.cpp  Light.h  Line.cpp  Line.h  Object.cpp  Object.h  PipLine.cpp  PipLine.h  PipeLine.cpp  PipeLine.h  Point.cpp  Point.h  Texture.cpp  Texture.h  Transformable.cpp  Transformable.h  Triangle.cpp  Triangle.h
Rasterization/Math/: Math.cpp  Math.h  MathImpl.h
Rasterization/Window/: Window.cpp  Window.h
example/: CMakeLists.txt  cat.cpp  cube.cpp  deer.cpp  dot.cpp  line.cpp  multi_cubes.cpp  triangle.cpp  two_triangle.cpp
raster/: CMakeLists.txt
raster/include/exception/: base_exception.h  glfw_login_exception.h
raster/include/graphics/: camera.h  color.h  i_drawable.h  i_transformable.h  light.h  line.h  object.h  pipeline.h  point.h  texture.h  triangle.h
raster/include/math/: math.h  math_impl.h
raster/include/window/: window.h
raster/src/exception/: CMakeLists.txt  base_exception.cpp  glfw_login_exception.cpp
raster/src/graphics/: CMakeLists.txt  camera.cpp  color.cpp  i_drawable.cpp  i_transformable.cpp  light.cpp  line.cpp  object.cpp  pipeline.cpp  point.cpp  texture.cpp  triangle.cpp
raster/src/math/: CMakeLists.txt  math.cpp
raster/src/window/: CMakeLists.txt  window.cpp
test/: CMakeLists.txt  draw_a_cat.cpp  draw_a_cube.cpp  draw_a_deer.cpp  draw_a_dog.cpp  draw_a_line.cpp  draw_a_point.cpp  draw_a_triangle.cpp  draw_a_triangle_with_texture.cpp  draw_cube_with_light.cpp  test_function.cpp  test_z_buffer.cpp
